# Astute

./: .clang-tidy  .gitignore  .gitmodules  Astute.json  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  correctness.cppcheck  run.ps1  run.sh
Application/: AstuteApplication.cpp  AstuteApplication.hpp  CMakeLists.txt  main.cpp
Application/Lib/: popl.hpp
Application/Widgets/: PerformanceWidget.cpp  PerformanceWidget.hpp  SceneWidget.cpp  SceneWidget.hpp  Widget.hpp
Assets/images/: .gitignore
Assets/meshes/: .gitignore  cube.glb
Assets/meshes/cube/: cube.gltf
Assets/pipelines/: graphics_pipeline_composition_composition_17040857636144659160.yaml  graphics_pipeline_lights_lights_12775722847820040922.yaml  graphics_pipeline_line_line_9289788085541754120.yaml  graphics_pipeline_main_geometry_main_geometry_15521560096041138488.yaml  graphics_pipeline_predepth_empty_2752298371083492091.yaml  graphics_pipeline_shadow_empty_10149110668012969244.yaml
Assets/shaders/: bloom.comp  chromatic_aberration.frag  composition.frag  deferred.frag  deferred.vert  empty.frag  light_culling.comp  lights.frag  lights.vert  line.frag  line.vert  main_geometry.frag  main_geometry.vert  predepth.frag  predepth.vert  shadow.vert
Assets/shaders/include/: buffers.glsl  util.glsl
Core/: CMakeLists.txt
Core/include/: AstuteCore.hpp
Core/include/core/: AABB.hpp  Application.hpp  Camera.hpp  Clock.hpp  Concepts.hpp  DataBuffer.hpp  Entity.hpp  Event.hpp  Exceptions.hpp  Forward.hpp  FrameBasedCollection.hpp  Input.hpp  InputCodes.hpp  Logger.hpp  Maths.hpp  Platform.hpp  PlatformConfig.hpp  Profiler.hpp  Random.hpp  Scene.hpp  Serialisation.hpp  ShadowCascadeCalculator.hpp  Types.hpp  Verify.hpp  YAMLFile.hpp
Core/include/graphics/: Allocator.hpp  CommandBuffer.hpp  ComputePipeline.hpp  DescriptorResource.hpp  Device.hpp  Forward.hpp  Framebuffer.hpp  GPUBuffer.hpp  GraphicsPipeline.hpp  IFramebuffer.hpp  Image.hpp  Instance.hpp  InterfaceSystem.hpp  Material.hpp  Mesh.hpp  NewFramebuffer.hpp  Pipeline.hpp  RenderPass.hpp  Renderer.hpp  Renderer2D.hpp  RendererExtensions.hpp  Shader.hpp  ShaderBuffers.hpp  Swapchain.hpp  TextureCube.hpp  TextureGenerator.hpp  Types.hpp  Vertex.hpp  VulkanFunctionPointers.hpp  Window.hpp
Core/include/graphics/render_passes/: Bloom.hpp  ChromaticAberration.hpp  Composition.hpp  Deferred.hpp  LightCulling.hpp  Lights.hpp  MainGeometry.hpp  PreDepth.hpp  Predepth.hpp  Shadow.hpp
Core/include/pch/: CorePCH.hpp
Core/include/ui/: UI.hpp
Core/inline/core/: Logger.inl
Core/src/core/: Application.cpp  Camera.cpp  Clock.cpp  DataBuffer.cpp  Entity.cpp  Input.cpp  Logger.cpp  Platform.cpp  PlatformConfig.cpp  Profiler.cpp  Random.cpp  Scene.cpp  YAMLFile.cpp
Core/src/graphics/: Allocator.cpp  CommandBuffer.cpp  ComputePipeline.cpp  DescriptorResource.cpp  Device.cpp  Framebuffer.cpp  GPUBuffer.cpp  GraphicsPipeline.cpp  Image.cpp  ImageUtilities.cpp  Instance.cpp  InterfaceSystem.cpp  Material.cpp  Mesh.cpp  NewFramebuffer.cpp  RenderPass.cpp  Renderer.cpp  Renderer2D.cpp  RendererExtensions.cpp  Shader.cpp  Swapchain.cpp  Swapchain.inl  TextureCube.cpp  TextureGenerator.cpp  Vertex.cpp  VulkanFunctionPointers.cpp  Window.cpp
Core/src/graphics/render_passes/: Bloom.cpp  ChromaticAberration.cpp  Composition.cpp  Deferred.cpp  LightCulling.cpp  Lights.cpp  MainGeometry.cpp  Predepth.cpp  Shadow.cpp
Core/src/ui/: UI.cpp
Modules/: CMakeLists.txt
Modules/Logging/: CMakeLists.txt
Modules/Logging/include/logging/: Logger.hpp  Logger.inl
Modules/Logging/include/pch/: LoggingPCH.hpp
Modules/Logging/src/logging/: Logger.cpp
Modules/Platform/: CMakeLists.txt
Modules/Platform/impl/empty/platform/: Platform.cpp
Modules/Platform/impl/windows/platform/: Platform.cpp
Modules/Platform/include/platform/: Platform.hpp
Modules/ShaderCompilation/: CMakeLists.txt
Modules/ShaderCompilation/include/compilation/: ShaderCompiler.hpp
Modules/ShaderCompilation/include/reflection/: ReflectionData.hpp
Modules/ShaderCompilation/src/compilation/: ShaderCompiler.cpp
Modules/ShaderCompilation/src/reflection/: Reflector.cpp
Modules/ThreadPool/: CMakeLists.txt
Modules/ThreadPool/Tests/: CMakeLists.txt  command_buffer_dispatcher_test.cpp  simple_test.cpp
Modules/ThreadPool/include/pch/: ThreadPoolPCH.hpp
Modules/ThreadPool/include/thread_pool/: CommandBufferDispatcher.hpp  ResultContainer.hpp  ThreadPool.hpp
Modules/ThreadPool/src/thread_pool/: CommandBufferDispatcher.cpp  ThreadPool.cpp
ShaderCompilation/: CMakeLists.txt
ShaderCompilation/include/compilation/: ShaderCompiler.hpp
ShaderCompilation/include/reflection/: Forward.hpp  ReflectionData.hpp  Reflector.hpp
ShaderCompilation/src/compilation/: ShaderCompiler.cpp
ShaderCompilation/src/reflection/: Reflector.cpp
